fix logo too big

--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ section #content3 {
     }
 
     .logo {
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
     }
 }
